# lawvm

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_V0_1.md  ROADMAP.md  ROADMAP_V0_1.md  ROADMAP_V1_0.md  conftest.py  pyproject.toml
data/: finlex_metadata_corrections.yaml
data/estonia/: bench_corpus.csv  bench_corpus_notes.md  current_replayable_corpus.csv  current_replayable_corpus_notes.md  replayable_corpus.csv  replayable_corpus_notes.md
data/finland/: amendment_parents.csv  bench_core.csv  bench_corpus.csv  bench_corpus_curated217.csv  bench_corpus_notes.md  bench_notruth.csv  bench_partition_audit.csv  bench_suspect.csv  corrigendum_adjudications_fi.jsonl  corrigendum_manual.yaml  corrigendum_sources_fi.jsonl  known_missing_sources.txt
data/uk/: bench_corpus.csv  bench_corpus_hard_smoke.csv  bench_corpus_hard_smoke_source_closed.csv  bench_corpus_hard_stress.csv  bench_corpus_hard_tight.csv  bench_corpus_hard_tight_source_closed.csv  bench_corpus_modern_smoke.csv  bench_corpus_modern_tight.csv  bench_corpus_smoke.csv  bench_corpus_tight.csv
data/uk_bench_runs/: asp_baseline.csv  smoke_test.csv  uk_20260326_0153.csv
docs/: README.md  benchmark-methodology.md  getting-started.md  jurisdictions.md  open-law-demo.md  project-history.md  security-privacy.md
eu/: README.md
eu/manifests/: cellar_notices_finland_intersections.json  finland_intersections.json
jurisdiction_starter/: ADJUDICATION_PLAN.md  AI_AGENT_PROTOCOL.md  API_CORPUS_FRONTEND_ADDENDUM.md  EVAL_PLAN.md  FILE_MAP.md  JURISDICTION_PROFILE.md  PHASE_PLAN.md  README.md  REVIEW_CHECKLIST.md  ROADMAP.md  SOURCE_STRATEGY.md  TASK_CARD_TEMPLATE.md  p5_runtime_scaffold.py
jurisdiction_starter/examples/: canonical_effects.example.json  clause_surface.example.json  evidence_pack_summary.example.json  findings.example.jsonl  inventory_manifest.example.json  operation_effect_rows.example.jsonl  source_record.example.json  verification_report.example.json
notes/: CANONICAL_OP_SEMANTICS.md  COMPILER_OBSERVATION_STREAM.md  CONDITIONAL_ENACTMENT_AND_TEMPORAL_EFFECTS.md  CONFORMANCE_CORPUS.md  CORPUS_REPLAY_EVIDENCE_CONTRACT.md  CROSS_JURISDICTION_ARCHITECTURE.md  ESTONIA_FRONTEND_LIVING_SPEC.md  EVIDENCE_INFERENCE_MODEL.md  FINLAND_CLAUSE_AST_SPEC.md  FINLAND_ELABORATED_GROUP_SPEC.md  FINLAND_ELABORATION_RULES.md  FINLAND_FRONTEND_ELABORATION_ARCHITECTURE.md  FINLAND_PAYLOAD_IR_SPEC.md  FINLAND_SPARSE_SUBSECTION_SLOT_SPEC.md  HIGH_ORDER_INVARIANT_REUSE_AUDIT.md  JURISDICTION_CLI_TOOLING_CONTRACT.md  LAWVM_ARCHITECTURE_INDEX.md  LAWVM_COMPILER_DIFFICULTY.md  LAWVM_CONSTITUTION.md  LAWVM_STACK_MAP.md  LEGAL_BRANCH_AND_AUTHORITY_AXIS.md  MANUAL_COMPILATION_CLAIMS.md  OPEN_LAW_CORPUS_REPLAY_PLAN.md  OPEN_LAW_FRONTEND_SPEC.md  PROOF_ALGEBRA.md  PROOF_BOUNDARY.md  PROOF_CLAIMS_ALGEBRA.md  README.md  REGEX_TO_GRAMMAR_MIGRATION.md  REPLAY_INVARIANTS_AND_FAILURE_MODEL.md  SOURCE_PATHOLOGY_AND_ADJUDICATION_SPEC.md  SPEC_INDEX.md  THEORY_OF_LAWVM.md  UK_FRONTEND_ELABORATION_ARCHITECTURE.md  UK_LAWVM_ROADMAP.md  UK_OFFICIAL_DRAFTING_SOURCE_LEDGER.md  UK_REPLAY_LIVING_SPEC.md  UK_REPLAY_REGIME_CONTRACT.md  VERIFICATION_PROPERTY_MAP.md
proofs/: z3_claim_precedence.py  z3_occupancy.py  z3_temporal_selector.py
proofs/tla/: LawVMTemporalOverlay.cfg  LawVMTemporalOverlay.tla
scripts/: acquire_ee_corpus.py  acquire_uk_corpus.py  audit_adjudications.py  audit_invariants.py  audit_verified_finlex_yaml.py  audit_warnings.py  backfill_finlex_consolidated_versions.py  bench_regression_guard.py  bench_simple.py  build_publication_db.py  build_publication_db.sh  build_release_archive.sh  build_replay_debt_inventory.py  build_standalone_findings.py  cache_finlex_html.py  capture_gold.py  ci.sh  ci_sharded.sh  clause_ast_round_trip_validation.py  codex_exec_queue.py  codex_resume_loop.py  curate_corpus.py  curate_ee_corpus.py  debug_gdpr_discovery.py  diff_pdf_xml_corrigenda.py  ee_batch_quality.py  ee_census.py  eu_amendment_counts.py  eu_corpus_fmx4_test.py  eu_corpus_test.py  eu_replay_smoke_check.py  fetch_uk_affecting_acts.py  format_discovery.py  golden_gather.py  golden_triage.py  html_oracle_bench.py  html_section_extractor.py  inventory_parser_smells.py  inventory_replay_adjudications.py  legal_entropy.py  (+28 more)
scripts/baselines/: uk_broad_2026-05-30.json  uk_broad_2026-05-31.json  uk_grounding_corpus.txt
src/lawvm/: __init__.py  contracts.py  corpus_store.py  graph_build.py  replay_adjudication.py  roman.py  xml_ingest.py
tests/: corpus_pin_helpers.py  test_acquire_uk_corpus.py  test_acquisition.py  test_address_parse.py  test_adjudication_evidence.py  test_admissible_binding.py  test_amendment_index.py  test_annotations_views.py  test_apply.py  test_apply_properties.py  test_audit.py  test_audit_scripts.py  test_audit_verified_finlex_yaml.py  test_authority.py  test_backfill_finlex_consolidated_versions.py  test_bench.py  test_bench_comparable.py  test_bench_curate.py  test_bench_report.py  test_blame.py  test_body_coverage.py  test_body_pairing.py  test_branch_demo.py  test_branch_projection.py  test_build_publication_db.py  test_canonical_intent_kinds.py  test_capture.py  test_chain_completeness.py  test_chapter_seed.py  test_check_consistency.py  test_ci_shards.py  test_citation_routing.py  test_clause_ast.py  test_clause_ast_curated.py  test_clause_ast_ee_validation.py  test_clause_patterns.py  test_clause_surface.py  test_cli_debug_tools.py  test_comparison_normalization.py  test_compile_facade.py  (+304 more)
tests/fixtures/: fi_curated_cases.py  oracle_check_results_replay_debt.csv  residual_ledger_tranche0_example.csv
uk/: README.md
uk/manifests/: corpus_representative.json  effects_chain_seeds.json  pilot_sources.json  ukpga_1978_30_affecting_acts.json  version_chain_exemplars.json
uk/openapi/: README.md  effects.yaml  identifiers.yaml  impact-assessments.yaml  legislation.yaml  notes.yaml  search.yaml  sitemaps.yaml
us/: README.md
viewer/: estonia-divergences.css  estonia-divergences.html  estonia-divergences.js  finlex-vahvistetut.html  finlex-virheet.html  finlex-virheet.js
(+532 files in other folders)
